--- a/Analyse/MainWindow.xaml
+++ b/Analyse/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Analyse"
+        xmlns:local="clr-namespace:Analyse" xmlns:system1="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
@@ -30,31 +30,66 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Label Content="Nom : " HorizontalAlignment="Left" Margin="10,2,0,0" VerticalAlignment="Top" Width="74" Height="26" Grid.Row="1" Grid.RowSpan="2"/>
-        <Label Content="Heure Debut : " HorizontalAlignment="Left" Margin="10,2,0,0" VerticalAlignment="Top" Width="86" Grid.Column="1" Height="26" Grid.Row="1" Grid.RowSpan="2"/>
-        <Label Content="Heure Finale : " HorizontalAlignment="Left" Margin="31,2,0,0" VerticalAlignment="Top" Width="86" Grid.Column="3" Height="26" Grid.Row="1" Grid.RowSpan="2"/>
+        <Label Content="Heure Debut : " HorizontalAlignment="Left" Margin="506,461,0,0" VerticalAlignment="Top" Width="86" Grid.Column="3" Height="26" Grid.Row="16"/>
+        <Label Content="Heure Finale : " HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Width="86" Grid.Column="2" Height="26" Grid.Row="1"/>
         <Label Content="PlateForme de Gestion de disponibilité" HorizontalAlignment="Left" Margin="28,0,0,0" VerticalAlignment="Center" Width="406" Height="26" Grid.ColumnSpan="3" FontFamily="Arial Black" FontWeight="Bold" Grid.Column="1" FontSize="10"/>
-        <ComboBox Grid.Column="1" HorizontalAlignment="Left" Margin="114,4,0,0" Grid.Row="1" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2"/>
-        <ComboBox Grid.Column="3" HorizontalAlignment="Left" Margin="126,4,0,0" Grid.Row="1" VerticalAlignment="Top" Width="120"/>
-        <Button Grid.Column="1" Content="Ajouter" HorizontalAlignment="Left" Margin="71,0,0,0" Grid.Row="3" VerticalAlignment="Center" Width="109" Height="31"/>
-        <Button Grid.Column="3" Content="Supprimer" HorizontalAlignment="Left" Margin="71,0,0,0" Grid.Row="3" VerticalAlignment="Center" Width="109" Height="31" />
-        <Label Content="Affichage des disponible" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="160" Height="26" FontFamily="Arial Black" FontWeight="Bold" Grid.Column="1" FontSize="10" Grid.Row="10" Margin="53,4,0,0" Grid.RowSpan="2"/>
-        <ComboBox HorizontalAlignment="Left" Grid.Row="6" VerticalAlignment="Center" Width="358" Margin="122,0,0,0" Grid.ColumnSpan="2"/>
-        <ComboBox HorizontalAlignment="Left" Grid.Row="6" VerticalAlignment="Center" Width="120" Grid.Column="3" Margin="134,0,0,0"/>
-        <Label Content="Recherche de disponible" HorizontalAlignment="Left"  VerticalAlignment="Center" Width="160" Height="26" FontFamily="Arial Black" FontWeight="Bold" Grid.Column="1" FontSize="10" Grid.Row="5" Margin="53,0,0,0"/>
-        <Label Content="Nom : " HorizontalAlignment="Left" Margin="27,6,0,0" VerticalAlignment="Top" Width="73" Height="26" Grid.Row="6" Grid.RowSpan="2"/>
-        <Label Content="Durée " HorizontalAlignment="Left" Margin="31,7,0,0" VerticalAlignment="Top" Width="73" Height="26" Grid.Row="6" Grid.Column="3" Grid.RowSpan="2"/>
-        <Button Grid.Column="1" Content="Rechercher" HorizontalAlignment="Left" Margin="71,0,0,0" Grid.Row="8" VerticalAlignment="Center" Width="109" Height="31" />
-        <Button Grid.Column="3" Content="Modifier" HorizontalAlignment="Left" Margin="71,0,0,0" Grid.Row="8" VerticalAlignment="Center" Width="109" Height="31" />
+
+        <TextBox x:Name="idnom" HorizontalAlignment="Left" Margin="55,0,0,0" Grid.Row="1" TextWrapping="Wrap"  VerticalAlignment="Center" Width="140" Height="24"/>
+        <Button x:Name="BtnAjouter" Grid.Column="1" Content="Ajouter" HorizontalAlignment="Left" Margin="71,0,0,0" Grid.Row="3" VerticalAlignment="Center" Width="109" Height="31" />
+        <Button x:Name="BtnSupprimer" Grid.Column="3" Content="Supprimer" HorizontalAlignment="Left" Margin="71,0,0,0" Grid.Row="3" VerticalAlignment="Center" Width="109" Height="31" />
+        <Label Content="Affichage des disponible" HorizontalAlignment="Left"  VerticalAlignment="Center" Width="160" Height="26" FontFamily="Arial Black" FontWeight="Bold" Grid.Column="1" FontSize="10" Grid.Row="10" Margin="120,0,0,0" Grid.ColumnSpan="2"/>
+        <ComboBox HorizontalAlignment="Left" Grid.Row="6" VerticalAlignment="Center" Width="258" Margin="122,0,0,0" Grid.ColumnSpan="2"/>
+        <ComboBox HorizontalAlignment="Left" Grid.Row="8" VerticalAlignment="Center" Width="120" Grid.Column="1" Margin="71,0,0,0" SelectedIndex="0">
+
+            <system1:String>La durée</system1:String>
+            <system1:String>15 MIN</system1:String>
+            <system1:String>45MIN</system1:String>
+            <system1:String>60MIN</system1:String>
+            <system1:String>1 HEURE</system1:String>
+        </ComboBox>
+        <Label Content="Recherche de disponible" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="400" Height="26" FontFamily="Arial Black" FontWeight="Bold" Grid.Column="1" FontSize="10" Grid.Row="5" Margin="120,1,0,0" Grid.RowSpan="2" Grid.ColumnSpan="3"/>
+        <Label Content="Nom : " HorizontalAlignment="Left" Margin="27,0,0,0" VerticalAlignment="Center" Width="73" Height="26" Grid.Row="6"/>
+        <Button x:Name="BtnRecherche" Grid.Column="3" Content="Recherche" HorizontalAlignment="Left" Margin="68,0,0,0" Grid.Row="6" VerticalAlignment="Center" Width="114" Height="26" />
+        <Button x:Name="BtnModifier" Grid.Column="3" Content="Ajouter" HorizontalAlignment="Left" Margin="71,0,0,0" Grid.Row="8" VerticalAlignment="Center" Width="109" Height="31"  />
         <DataGrid Grid.Row="11" Grid.ColumnSpan="4" Margin="10,25,10,25" Grid.RowSpan="3" >
             <DataGrid.Columns>
                 <DataGridTextColumn  Header="Nom" Binding="{Binding Nom}" Width="*" />
                 <DataGridTextColumn Header="HeureRencontre" Binding="{Binding HeureRencontre}" Width="*"/>
+                <DataGridTextColumn Header="Jour" Binding="{Binding Jour}"  Width="*" />
                 <DataGridTextColumn Header="Durée" Binding="{Binding Duree}"  Width="*" />
+
             </DataGrid.Columns>
         </DataGrid>
-        <TextBox HorizontalAlignment="Left" Margin="89,7,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Margin="93,0,0,0" Grid.Row="1" TextWrapping="Wrap"  VerticalAlignment="Center" Width="97" Grid.Column="1" Height="24"/>
+        <Label Content="Jour : " HorizontalAlignment="Left" Margin="10,23,0,0" VerticalAlignment="Top" Width="80" Grid.Column="3" Height="26" Grid.RowSpan="2"/>
+        <ComboBox HorizontalAlignment="Left" Grid.Row="8" VerticalAlignment="Center" Width="120" Margin="47,0,0,0" SelectedIndex="0">
+
+            <system1:String>Les jours</system1:String>
+            <system1:String>Lundi</system1:String>
+            <system1:String>Mardi</system1:String>
+            <system1:String>Mercredi</system1:String>
+            <system1:String>Jeudi</system1:String>
+            <system1:String>Vendredi</system1:String>
+        </ComboBox>
+        <Label Content="Jour :" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Width="47" Height="26" Grid.Row="8" RenderTransformOrigin="0.763,0.412"/>
+        <Label Content="Durée:" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Width="47" Height="26" Grid.Row="8" RenderTransformOrigin="0.763,0.412" Grid.Column="1"/>
+        <ComboBox HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="60,25,0,0" SelectedIndex="0" Grid.Column="3" Grid.RowSpan="2">
+
+            <system1:String>Les jours</system1:String>
+            <system1:String>Lundi</system1:String>
+            <system1:String>Mardi</system1:String>
+            <system1:String>Mercredi</system1:String>
+            <system1:String>Jeudi</system1:String>
+            <system1:String>Vendredi</system1:String>
+        </ComboBox>
+        <Label Content="Heure Debut : " HorizontalAlignment="Left" Margin="2,0,0,0" VerticalAlignment="Center" Width="86" Grid.Column="1" Height="26" Grid.Row="1"/>
+        <Label Content="Nom : " HorizontalAlignment="Left" Margin="10,20,0,0" VerticalAlignment="Top" Width="73" Height="26" Grid.Row="7" Grid.Column="2" Grid.RowSpan="2"/>
+        <TextBox x:Name="idnom_Copy" HorizontalAlignment="Left" Margin="50,0,0,0" Grid.Row="8" TextWrapping="Wrap"  VerticalAlignment="Center" Width="140" Height="24" Grid.Column="2"/>
+        <Button x:Name="BtnModifier_Copy" Grid.Column="3" Content="Rechercher" HorizontalAlignment="Left" Margin="71,0,0,0" Grid.Row="9" VerticalAlignment="Center" Width="109" Height="31"  />
+        <TextBox HorizontalAlignment="Left" Margin="96,0,0,0" Grid.Row="1" TextWrapping="Wrap"  VerticalAlignment="Center" Width="97" Grid.Column="2" Height="24"/>
 
 
     </Grid>
