--- a/Analyse/GererEmploye.xaml
+++ b/Analyse/GererEmploye.xaml
@@ -7,6 +7,205 @@
         mc:Ignorable="d"
         Title="GererEmploye" Height="450" Width="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Label Content="PlateForme de Gestion de disponibilité" 
+               HorizontalAlignment="Left" 
+               Margin="28,0,0,0" 
+               VerticalAlignment="Center" 
+               Width="406" 
+               Height="26" 
+               Grid.ColumnSpan="3" 
+               FontFamily="Arial Black" 
+               FontWeight="Bold" 
+               Grid.Column="1" 
+               FontSize="10"/>
+
+        <Label Content="Nom : " 
+               HorizontalAlignment="Left" 
+               Margin="10,2,0,0" 
+               VerticalAlignment="Top" 
+               Width="74" Height="26" 
+               Grid.Row="1"
+               Grid.RowSpan="2"/>
         
+        <Label Content="Heure Debut : " 
+               HorizontalAlignment="Left" 
+               Margin="506,461,0,0" 
+               VerticalAlignment="Top" 
+               Width="86" Grid.Column="3" 
+               Height="26" Grid.Row="16"/>
+
+        <Label Content="Jour" 
+               HorizontalAlignment="Left" 
+               Margin="10,0,0,0" 
+               VerticalAlignment="Center" 
+               Width="86" 
+               Grid.Column="0" 
+               Height="26" 
+               Grid.Row="2"/>
+
+        <Label Content="Heure Finale" 
+               HorizontalAlignment="Left" 
+               Margin="10,0,0,0" 
+               VerticalAlignment="Center" 
+               Width="86" 
+               Grid.Column="2" 
+               Height="26" 
+               Grid.Row="2"/>
+
+        <Label Content="Heure Debut" 
+               HorizontalAlignment="Left" 
+               Margin="10,0,0,0" 
+               VerticalAlignment="Center" 
+               Width="86" 
+               Grid.Column="1" 
+               Height="26" 
+               Grid.Row="2"/>
+
+        
+
+        
+
+        <TextBox x:Name="idnom" 
+                 HorizontalAlignment="Left" 
+                 Margin="55,0,0,0" 
+                 Grid.Row="1" 
+                 TextWrapping="Wrap"  
+                 VerticalAlignment="Center" 
+                 Width="140" 
+                 Height="24"/>
+
+        <TextBox x:Name="HDLundi" 
+                 HorizontalAlignment="Left" 
+                 Margin="55,0,0,0" 
+                 Grid.Row="3"
+                 Grid.Column="1"
+                 TextWrapping="Wrap"  
+                 VerticalAlignment="Center" 
+                 Width="140" 
+                 Height="24"/>
+
+        <TextBox x:Name="HFLundi" 
+                 HorizontalAlignment="Left" 
+                 Margin="55,0,0,0" 
+                 Grid.Row="3"
+                 Grid.Column="2"
+                 TextWrapping="Wrap"  
+                 VerticalAlignment="Center" 
+                 Width="140" 
+                 Height="24"/>
+
+        <TextBox x:Name="HDMardi" 
+                 HorizontalAlignment="Left" 
+                 Margin="55,0,0,0" 
+                 Grid.Row="1"
+                 Grid.Column="1"
+                 TextWrapping="Wrap"  
+                 VerticalAlignment="Center" 
+                 Width="140" 
+                 Height="24"/>
+
+        <TextBox x:Name="HFMardi" 
+                 HorizontalAlignment="Left" 
+                 Margin="55,0,0,0" 
+                 Grid.Row="1" 
+                 TextWrapping="Wrap"  
+                 VerticalAlignment="Center" 
+                 Width="140" 
+                 Height="24"/>
+
+        <TextBox x:Name="HDMercredi" 
+                 HorizontalAlignment="Left" 
+                 Margin="55,0,0,0" 
+                 Grid.Row="1" 
+                 TextWrapping="Wrap"  
+                 VerticalAlignment="Center" 
+                 Width="140" 
+                 Height="24"/>
+
+        <TextBox x:Name="HFMercredi" 
+                 HorizontalAlignment="Left" 
+                 Margin="55,0,0,0" 
+                 Grid.Row="1" 
+                 TextWrapping="Wrap"  
+                 VerticalAlignment="Center" 
+                 Width="140" 
+                 Height="24"/>
+
+        <TextBox x:Name="HDJeudi" 
+                 HorizontalAlignment="Left" 
+                 Margin="55,0,0,0" 
+                 Grid.Row="1" 
+                 TextWrapping="Wrap"  
+                 VerticalAlignment="Center" 
+                 Width="140" 
+                 Height="24"/>
+
+        <TextBox x:Name="HFJeudi" 
+                 HorizontalAlignment="Left" 
+                 Margin="55,0,0,0" 
+                 Grid.Row="1" 
+                 TextWrapping="Wrap"  
+                 VerticalAlignment="Center" 
+                 Width="140" 
+                 Height="24"/>
+
+        <TextBox x:Name="HDVendredi" 
+                 HorizontalAlignment="Left" 
+                 Margin="55,0,0,0" 
+                 Grid.Row="1" 
+                 TextWrapping="Wrap"  
+                 VerticalAlignment="Center" 
+                 Width="140" 
+                 Height="24"/>
+
+        <TextBox x:Name="HFVendredi" 
+                 HorizontalAlignment="Left" 
+                 Margin="55,0,0,0" 
+                 Grid.Row="1" 
+                 TextWrapping="Wrap"  
+                 VerticalAlignment="Center" 
+                 Width="140" 
+                 Height="24"/>
+
+        
+
+
+
+        <Button x:Name="BtnAjouter" 
+                Grid.Column="1" 
+                Content="Ajouter" 
+                HorizontalAlignment="Left" 
+                Margin="71,0,0,0" 
+                Grid.Row="8" 
+                VerticalAlignment="Center" 
+                Width="109" 
+                Height="31" />
+        
+        <Button x:Name="BtnSupprimer" 
+                Grid.Column="3" 
+                Content="Supprimer" 
+                HorizontalAlignment="Left" 
+                Margin="71,0,0,0" 
+                Grid.Row="1" 
+                VerticalAlignment="Center" 
+                Width="109"
+                Height="31" />
     </Grid>
 </Window>
