--- a/Analyse/Recherche.xaml
+++ b/Analyse/Recherche.xaml
@@ -1,12 +1,68 @@
-﻿<Window x:Class="Analyse.Recherche"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Analyse"
+        xmlns:System="clr-namespace:System;assembly=System.Runtime" x:Class="Analyse.Recherche"
         mc:Ignorable="d"
         Title="Recherche" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Label Content="                                 Recherhce des disponibilité" HorizontalAlignment="Left" VerticalAlignment="Center" Width="400" Height="26" Grid.ColumnSpan="2" FontFamily="Arial Black" FontWeight="Bold" Grid.Column="1" FontSize="10"/>
+        <Label Content="Nom : " HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Width="73" Height="26" Grid.Row="1"/>
+        <ComboBox HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top" Width="327" Margin="63,14,0,0" Grid.ColumnSpan="2" Height="31">
+            <Button x:Name="BtnRecherche" Content="Recherche" HorizontalAlignment="Left" VerticalAlignment="Top" Width="114" Height="26" />
+        </ComboBox>
+        <Label Content="Jour :" HorizontalAlignment="Left" Margin="10,19,0,0" VerticalAlignment="Top" Width="47" Height="26" Grid.Row="2" RenderTransformOrigin="0.763,0.412"/>
+
+        <ComboBox HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Top" Width="120" Margin="63,21,0,0" SelectedIndex="0">
+
+            <System:String>Les jours</System:String>
+            <System:String>Lundi</System:String>
+            <System:String>Mardi</System:String>
+            <System:String>Mercredi</System:String>
+            <System:String>Jeudi</System:String>
+            <System:String>Vendredi</System:String>
+        </ComboBox>
+        <Label Content="Durée:" HorizontalAlignment="Left" Margin="10,19,0,0" VerticalAlignment="Top" Width="48" Height="26" Grid.Row="2" RenderTransformOrigin="0.763,0.412" Grid.Column="1"/>
+        <ComboBox HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Top" Width="111" Grid.Column="1" Margin="79,22,0,0" SelectedIndex="0">
+
+            <System:String>La durée</System:String>
+            <System:String>15 MIN</System:String>
+            <System:String>45MIN</System:String>
+            <System:String>60MIN</System:String>
+            <System:String>1 HEURE</System:String>
+        </ComboBox>
+        <Button x:Name="BtnModifier" Grid.Column="2" Content="Ajouter" HorizontalAlignment="Center" Margin="0,14,0,0" Grid.Row="1" VerticalAlignment="Top" Width="108" Height="31"  />
+        <Label Content="                                  Affichage des   disponible" HorizontalAlignment="Center"  VerticalAlignment="Top" Width="400" Height="26" FontFamily="Arial Black" FontWeight="Bold" Grid.Column="1" FontSize="10" Grid.Row="3" Margin="0,18,0,0" Grid.ColumnSpan="2"/>
+        <DataGrid Grid.Row="4" Grid.ColumnSpan="4" Margin="10,14,10,14" >
+            <DataGrid.Columns>
+                <DataGridTextColumn  Header="Nom" Binding="{Binding Nom}" Width="*" />
+                <DataGridTextColumn Header="HeureRencontre" Binding="{Binding HeureRencontre}" Width="*"/>
+                <DataGridTextColumn Header="Jour" Binding="{Binding Jour}"  Width="*" />
+                <DataGridTextColumn Header="Durée" Binding="{Binding Duree}"  Width="*" />
+
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button x:Name="BtnModifier_Copy2" Grid.Column="3" Content="Recherche" HorizontalAlignment="Left" Margin="81,14,0,0" Grid.Row="1" VerticalAlignment="Top" Width="109" Height="31"  />
+
     </Grid>
 </Window>
