--- a/Analyse/Recherche.xaml
+++ b/Analyse/Recherche.xaml
@@ -63,6 +63,7 @@
             </DataGrid.Columns>
         </DataGrid>
         <Button x:Name="BtnModifier_Copy2" Grid.Column="3" Content="Recherche" HorizontalAlignment="Left" Margin="81,14,0,0" Grid.Row="1" VerticalAlignment="Top" Width="109" Height="31"  />
+        <Button x:Name="BtnModifier_Copy" Content="Retour" HorizontalAlignment="Left" Margin="10,4,0,0" VerticalAlignment="Top" Width="108" Height="31"  />
 
     </Grid>
 </Window>
