--- a/Analyse/Recherche.xaml
+++ b/Analyse/Recherche.xaml
@@ -28,11 +28,26 @@
         </Grid.ColumnDefinitions>
         <Label Content="                                 Recherhce des disponibilité" HorizontalAlignment="Left" VerticalAlignment="Center" Width="400" Height="26" Grid.ColumnSpan="2" FontFamily="Arial Black" FontWeight="Bold" Grid.Column="1" FontSize="14"/>
         <Label Content="Nom : " HorizontalAlignment="Left" Margin="10,14,0,0" VerticalAlignment="Top" Width="73" Height="26" Grid.Row="1" FontFamily="Segoe UI Black"/>
-        <ComboBox HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top" Width="327" Margin="63,14,0,0" Grid.ColumnSpan="2" Height="31">
+        <ComboBox x:Name="cbxEmploye"
+                  HorizontalAlignment="Left" 
+                  Grid.Row="1" 
+                  VerticalAlignment="Top" 
+                  Width="327" 
+                  Margin="63,14,0,0" 
+                  Grid.ColumnSpan="2" 
+                  Height="31"
+                  SelectedIndex="0">
+            <ComboBoxItem>Selectionnez un employer...</ComboBoxItem>
         </ComboBox>
         <Label Content="Jour :" HorizontalAlignment="Left" Margin="10,19,0,0" VerticalAlignment="Top" Width="47" Height="26" Grid.Row="2" RenderTransformOrigin="0.763,0.412" FontFamily="Segoe UI Black"/>
 
-        <ComboBox HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Top" Width="120" Margin="63,21,0,0" SelectedIndex="0">
+        <ComboBox x:Name="cbxJour"
+                  HorizontalAlignment="Left" 
+                  Grid.Row="2" 
+                  VerticalAlignment="Top"
+                  Width="120" 
+                  Margin="63,21,0,0" 
+                  SelectedIndex="0">
 
             <System:String>Les jours</System:String>
             <System:String>Lundi</System:String>
@@ -42,26 +57,25 @@
             <System:String>Vendredi</System:String>
         </ComboBox>
         <Label Content="Durée:" HorizontalAlignment="Left" Margin="10,19,0,0" VerticalAlignment="Top" Width="48" Height="26" Grid.Row="2" RenderTransformOrigin="0.763,0.412" Grid.Column="1" FontFamily="Segoe UI Black"/>
-        <ComboBox HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Top" Width="111" Grid.Column="1" Margin="79,22,0,0" SelectedIndex="0">
+        <ComboBox x:Name="cbxDuree" HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Top" Width="111" Grid.Column="1" Margin="79,22,0,0" SelectedIndex="0">
 
             <System:String>La durée</System:String>
-            <System:String>15 MIN</System:String>
-            <System:String>45MIN</System:String>
-            <System:String>60MIN</System:String>
-            <System:String>1 HEURE</System:String>
+            <System:String>15 min</System:String>
+            <System:String>30 min</System:String>
+            <System:String>45 min</System:String>
+            <System:String>60 min</System:String>
         </ComboBox>
-        <Button x:Name="BtnModifier" Grid.Column="2" Content="Ajouter" HorizontalAlignment="Center" Margin="0,14,0,0" Grid.Row="1" VerticalAlignment="Top" Width="108" Height="31"  />
+        <Button x:Name="BtnAjouter" Grid.Column="2" Content="Ajouter" HorizontalAlignment="Center" Margin="0,14,0,0" Grid.Row="1" VerticalAlignment="Top" Width="108" Height="31" Click="BtnAjouter_Click"  />
         <Label Content="                                  Affichage des   disponible" HorizontalAlignment="Center"  VerticalAlignment="Top" Width="400" Height="26" FontFamily="Arial Black" FontWeight="Bold" Grid.Column="1" FontSize="10" Grid.Row="3" Margin="0,18,0,0" Grid.ColumnSpan="2"/>
-        <DataGrid Grid.Row="4" Grid.ColumnSpan="4" Margin="10,14,10,10" >
-            <DataGrid.Columns>
-                <DataGridTextColumn  Header="Nom" Binding="{Binding Nom}" Width="*" />
-                <DataGridTextColumn Header="HeureRencontre" Binding="{Binding HeureRencontre}" Width="*"/>
-                <DataGridTextColumn Header="Jour" Binding="{Binding Jour}"  Width="*" />
-                <DataGridTextColumn Header="Durée" Binding="{Binding Duree}"  Width="*" />
-
-            </DataGrid.Columns>
+        <DataGrid x:Name="dgResultatRecherche" 
+                  Grid.Row="4" 
+                  Grid.ColumnSpan="4" 
+                  Margin="10,14,10,10"
+                  ColumnWidth="*"
+                  ItemsSource="{Binding Path=DefaultView, ElementName=resultatRecherche}">
+            
         </DataGrid>
-        <Button x:Name="BtnModifier_Copy2" Grid.Column="3" Content="Recherche" HorizontalAlignment="Left" Margin="81,14,0,0" Grid.Row="1" VerticalAlignment="Top" Width="109" Height="31"  />
+        <Button x:Name="BtnRechercher" Grid.Column="3" Content="Recherche" HorizontalAlignment="Left" Margin="81,14,0,0" Grid.Row="1" VerticalAlignment="Top" Width="109" Height="31" Click="BtnRechercher_Click"  />
         <Button x:Name="BtnRetour" Content="Retour" HorizontalAlignment="Left" Margin="10,4,0,0" VerticalAlignment="Top" Width="108" Height="31" Click="BtnRetour_Click"  />
 
     </Grid>
