--- a/Analyse/Recherche.xaml
+++ b/Analyse/Recherche.xaml
@@ -7,8 +7,17 @@
         xmlns:System="clr-namespace:System;assembly=System.Runtime" x:Class="Analyse.Recherche"
         mc:Ignorable="d"
         Title="Recherche" Height="450" Width="800">
-    <Grid>
+    <Grid x:Name="mainGrid">
         <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
@@ -26,28 +35,39 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Label Content="                                 Recherhce des disponibilité" HorizontalAlignment="Left" VerticalAlignment="Center" Width="400" Height="26" Grid.ColumnSpan="2" FontFamily="Arial Black" FontWeight="Bold" Grid.Column="1" FontSize="14"/>
-        <Label Content="Nom : " HorizontalAlignment="Left" Margin="10,14,0,0" VerticalAlignment="Top" Width="73" Height="26" Grid.Row="1" FontFamily="Segoe UI Black"/>
+        <Label Content="Recherche des disponibilités" 
+               HorizontalAlignment="Center" VerticalAlignment="Center" Width="400" 
+               Height="26" Grid.ColumnSpan="2" FontFamily="Arial Black" FontWeight="Bold" 
+               Grid.Column="1" FontSize="14" Grid.RowSpan="2"
+               HorizontalContentAlignment="Center" Grid.Row="0"/>
+        <Label Content="Nom : " HorizontalAlignment="Left" Margin="10,14,0,0" 
+               VerticalAlignment="Top" Width="73" Height="26" Grid.Row="2" 
+               FontFamily="Segoe UI Black" Grid.RowSpan="2"/>
         <ComboBox x:Name="cbxEmploye"
                   HorizontalAlignment="Left" 
-                  Grid.Row="1" 
+                  Grid.Row="2" 
                   VerticalAlignment="Top" 
                   Width="327" 
                   Margin="63,14,0,0" 
                   Grid.ColumnSpan="2" 
                   Height="31"
-                  SelectedIndex="0">
+                  SelectedIndex="0"
+                  Grid.RowSpan="2">
             <ComboBoxItem>Selectionnez un employer...</ComboBoxItem>
         </ComboBox>
-        <Label Content="Jour :" HorizontalAlignment="Left" Margin="10,19,0,0" VerticalAlignment="Top" Width="47" Height="26" Grid.Row="2" RenderTransformOrigin="0.763,0.412" FontFamily="Segoe UI Black"/>
+        <Label Content="Jour :" HorizontalAlignment="Left" Margin="10,19,0,0" 
+               VerticalAlignment="Top" Width="47" Height="26" Grid.Row="4" 
+               RenderTransformOrigin="0.763,0.412" FontFamily="Segoe UI Black"
+               Grid.RowSpan="2"/>
 
         <ComboBox x:Name="cbxJour"
                   HorizontalAlignment="Left" 
-                  Grid.Row="2" 
+                  Grid.Row="4" 
                   VerticalAlignment="Top"
                   Width="120" 
                   Margin="63,21,0,0" 
-                  SelectedIndex="0">
+                  SelectedIndex="0"
+                  Grid.RowSpan="2">
 
             <System:String>Les jours</System:String>
             <System:String>Lundi</System:String>
@@ -56,8 +76,14 @@
             <System:String>Jeudi</System:String>
             <System:String>Vendredi</System:String>
         </ComboBox>
-        <Label Content="Durée:" HorizontalAlignment="Left" Margin="10,19,0,0" VerticalAlignment="Top" Width="48" Height="26" Grid.Row="2" RenderTransformOrigin="0.763,0.412" Grid.Column="1" FontFamily="Segoe UI Black"/>
-        <ComboBox x:Name="cbxDuree" HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Top" Width="111" Grid.Column="1" Margin="79,22,0,0" SelectedIndex="0">
+        <Label Content="Durée:" HorizontalAlignment="Left" Margin="10,19,0,0" 
+               VerticalAlignment="Top" Width="48" Height="26" Grid.Row="4" 
+               RenderTransformOrigin="0.763,0.412" Grid.Column="1" 
+               FontFamily="Segoe UI Black" Grid.RowSpan="2"/>
+        <ComboBox x:Name="cbxDuree" HorizontalAlignment="Left" Grid.Row="4" 
+                  VerticalAlignment="Top" Width="111" Grid.Column="1" 
+                  Margin="79,22,0,0" SelectedIndex="0"
+                  Grid.RowSpan="2">
 
             <System:String>La durée</System:String>
             <System:String>15 min</System:String>
@@ -65,18 +91,87 @@
             <System:String>45 min</System:String>
             <System:String>60 min</System:String>
         </ComboBox>
-        <Button x:Name="BtnAjouter" Grid.Column="2" Content="Ajouter" HorizontalAlignment="Center" Margin="0,14,0,0" Grid.Row="1" VerticalAlignment="Top" Width="108" Height="31" Click="BtnAjouter_Click"  />
-        <Label Content="                                  Affichage des   disponible" HorizontalAlignment="Center"  VerticalAlignment="Top" Width="400" Height="26" FontFamily="Arial Black" FontWeight="Bold" Grid.Column="1" FontSize="10" Grid.Row="3" Margin="0,18,0,0" Grid.ColumnSpan="2"/>
-        <DataGrid x:Name="dgResultatRecherche" 
-                  Grid.Row="4" 
-                  Grid.ColumnSpan="4" 
-                  Margin="10,14,10,10"
-                  ColumnWidth="*"
-                  ItemsSource="{Binding Path=DefaultView, ElementName=resultatRecherche}">
-            
-        </DataGrid>
-        <Button x:Name="BtnRechercher" Grid.Column="3" Content="Recherche" HorizontalAlignment="Left" Margin="81,14,0,0" Grid.Row="1" VerticalAlignment="Top" Width="109" Height="31" Click="BtnRechercher_Click"  />
-        <Button x:Name="BtnRetour" Content="Retour" HorizontalAlignment="Left" Margin="10,4,0,0" VerticalAlignment="Top" Width="108" Height="31" Click="BtnRetour_Click"  />
+        <Button x:Name="BtnAjouter" Grid.Column="2" Content="Ajouter" 
+                HorizontalAlignment="Center" Margin="0,14,0,0" Grid.Row="2" 
+                VerticalAlignment="Top" Width="108" Height="31" 
+                Click="BtnAjouter_Click" Grid.RowSpan="2"/>
+        
+        <Button x:Name="BtnRechercher" Grid.Column="3" Content="Recherche" 
+                HorizontalAlignment="Left" Margin="81,14,0,0" Grid.Row="2" 
+                VerticalAlignment="Top" Width="109" Height="31" 
+                Click="BtnRechercher_Click" Grid.RowSpan="2"/>
+        
+        <Button x:Name="BtnRetour" Content="Retour" HorizontalAlignment="Left" 
+                Margin="10,4,0,0" VerticalAlignment="Center" Width="108" 
+                Height="31" Click="BtnRetour_Click" Grid.RowSpan="2"/>
+
+        <Button x:Name="btnclear"
+                Content="Clear"
+                Grid.Row="5"
+                Grid.Column="2"
+                Width="100" Click="btnclear_Click"/>
+
+        <Label Content="Affichage des disponibilités" HorizontalAlignment="Center"  
+               VerticalAlignment="Top" Width="400" Height="26" FontFamily="Arial Black" 
+               FontWeight="Bold" Grid.Column="1" FontSize="11" Grid.Row="6" Margin="0,18,0,0"
+               Grid.ColumnSpan="2" Grid.RowSpan="2"
+               HorizontalContentAlignment="Center"/>
+
+        <Grid Grid.Row="6"
+              Grid.Column="3"
+              Grid.RowSpan="2">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button x:Name="btnPageUp"
+                    Content="Next"
+                    Grid.Column="1"
+                    Margin="10" Click="btnPageUp_Click"
+                    />
+            <Button x:Name="btnPageDown"
+                    Content="Prev"
+                    Grid.Column="0"
+                    Margin="10" Click="btnPageDown_Click"
+                    />
+        </Grid>
+        
+        
+
+        <Label Content="Nom" Grid.Row="8" Grid.Column="0"
+               HorizontalContentAlignment="Center"
+               FontSize="10" FontWeight="Bold"
+               Background="LightGray"
+               BorderBrush="Gray"
+               BorderThickness="1, 1, 1, 0"
+               />
+        <Label Content="Jour" Grid.Row="8" Grid.Column="1"
+               HorizontalContentAlignment="Center"
+               FontSize="10" FontWeight="Bold"
+               Background="LightGray" 
+               BorderBrush="Gray"
+               BorderThickness="0, 1, 1, 0"
+               />
+        <Label Content="Heure debut" Grid.Row="8" Grid.Column="2"
+               HorizontalContentAlignment="Center"
+               FontSize="10" FontWeight="Bold"
+               Background="LightGray" 
+               BorderBrush="Gray"
+               BorderThickness="0, 1, 1, 0"
+               />
+        <Label Content="Heure fin" Grid.Row="8" Grid.Column="3"
+               HorizontalContentAlignment="Center"
+               FontSize="10" FontWeight="Bold"
+               Background="LightGray"
+               BorderBrush="Gray"
+               BorderThickness="0, 1, 1, 0"
+               />
+
+
+
 
     </Grid>
 </Window>
